--- a/build_random_forest/build_rf.Rmd
+++ b/build_random_forest/build_rf.Rmd
@@ -14,7 +14,7 @@ library(randomForest)
 set.seed(1)
 
 # set the directory you are working from
-directory <- "~/Documents/salmonella/pilot_model_building/"
+directory <- ""
 
 # Reading in the eggNOG model scores, checking to make sure that top eggNOG model hit for each protein in the orthogroup is the same
 traindata <- read.delim(paste(directory, "/bitscores.tsv", sep=""))
@@ -24,7 +24,8 @@ phenotype <- read.delim(paste(directory, "/phenotype.tsv", sep=""), header=F)
 phenotype[,1] <- make.names(phenotype[,1])
 
 traindata <- cbind.data.frame(traindata, phenotype=phenotype[match(row.names(traindata), phenotype[,1]),2])
-traindata <- na.roughfix(traindata)
+traindata[is.na(traindata)] <- 0
+# traindata <- na.roughfix(traindata)
 traindata <- traindata[,-nearZeroVar(traindata)]
 names(traindata) <- make.names(names(traindata))
 ```
@@ -219,7 +220,7 @@ model4
 train5 <- train4[,match(names(model4$importance[model4$importance[,1]>quantile(model4$importance[,1], 0.5),]), colnames(train4))]
 train5 <- cbind(train5, phenotype=train4$phenotype)
 param <- ncol(train5)-1
-model5 <- randomForest(phenotype ~ ., data=train5, ntree=10000, mtry=param/10, na.action=na.roughfix)
+model5 <- randomForest(phenotype ~ ., data=train5, ntree=10000, mtry=param/10, na.action=na.roughfix, proximity=T)
 model5
 
 model5$predicted
@@ -299,158 +300,96 @@ info$V5 <- as.character(info$V5)
 # proportion of each COG catergory that comes up in the top indicators
 background <- nogs[match(colnames(traindata), make.names(nogs[,1])),2]
 background_COGs <- annotations[match(background, annotations[,2]),5]
-background_COGs2 <- vector()
-for(i in background_COGs) {
-    if(!is.na(i)) {
-       if(nchar(i)>1) {
-        for(n in 1:nchar(i)) {
-          background_COGs2 <- c(background_COGs2, substr(i,n,n))
-        }
-      } else {
-    background_COGs2 <- rbind(background_COGs2, i)
-  }
-  }
-}
+library(plyr)
+bg_COGs2 <- aaply(as.character(background_COGs), 1, function(i){
+   if(!is.na(i)) {
+      if(nchar(i)>1) {
+       char <-  substr(i,1,1)
+       for(n in 2:nchar(i)) {
+         char <- paste(char,substr(i,n,n),sep=".")
+       }
+       return(char)
+     } else {
+         return(i)
+     }
+   } else{
+       return(NA)
+   }
 
+})
+background_COGs2 <- unlist(strsplit(bg_COGs2, "[.]"))
 
+predictors <- nogs[match(colnames(train5), make.names(nogs[,1])),2]
+predictor_COGs <- annotations[match(predictors, annotations[,2]),5]
+p_COGs2 <- aaply(as.character(predictor_COGs), 1, function(i){
+   if(!is.na(i)) {
+      if(nchar(i)>1) {
+       char <-  substr(i,1,1)
+       for(n in 2:nchar(i)) {
+         char <- paste(char,substr(i,n,n),sep=".")
+       }
+       return(char)
+     } else {
+         return(i)
+     }
+   } else{
+       return(NA)
+   }
 
-predictor_COGs <- data.frame()
-for(i in 1:nrow(info)) {
-  if(!is.na(info$V5[i])) {
-       if(nchar(info$V5[i])>1) {
-    for(n in 1:nchar(info$V5[i])) {
-      line <- info[i,]
-      line$V5 <- substr(info$V5[i],n,n)
-      predictor_COGs <- rbind(predictor_COGs, line)
-    }
-  } else {
-    predictor_COGs <- rbind(predictor_COGs, info[i,])
-  }
+})
+predictor_COGs2 <- unlist(strsplit(p_COGs2, "[.]"))
 
-  }
- }
-table(info[,5])/table(annotations[,5])[match(names(table(info[,5])), names(table(annotations[,5])))]
-
+barplot(rbind(table(background_COGs2), table(predictor_COGs2)[match(names(table(background_COGs2)), names(table(predictor_COGs2)))]))
 ```
 
 This section allows you to compare the performance of your model predicting true phenotype and a random phenotype. 
 
 ```{r, control}
-set.seed(1)
-
+set.seed(2)
 control <- traindata
 control$phenotype <- sample(traindata$phenotype)
 
-error <- vector()
-sparsity <- vector()
-for(i in c(1, 10, 50, 250, 500, 1000, 1500, 2000, 5000, 10000)) {
-  model <- randomForest(phenotype ~ ., data=control, ntree=i, na.action=na.roughfix)
-  error <- c(error, median(model$err.rate))
-  sparsity <- c(sparsity, (sum(model$importance[,1]<=0))/4415)
-}
-
-png(paste(directory, "/control_error_vs_ntree.png", sep=""), width=350, height = 350)
-plot(x=c(1, 10, 50, 250, 500, 1000, 1500, 2000, 5000, 10000), y=error, xlab="Number of trees", ylab="Median OOB error rate", pch=16)
-dev.off()
-
-error2 <- vector()
-sparsity2 <- vector()
 param <- ncol(control)-1
-for(i in c(1, param/10, param/5, param/2, param)) {
-  model <- randomForest(phenotype ~ ., data=control, ntree=1000, mtry=i, na.action=na.roughfix)
-  error2 <- c(error2, median(model$err.rate))
-  sparsity2 <- c(sparsity2, (sum(model$importance[,1]<=0))/3742)
-}
+cmodel1 <- randomForest(phenotype ~ ., data=control, ntree=10000, mtry=param/10, na.action=na.roughfix)
+cmodel1
 
-png(paste(directory, "/control_sparsity_vs_mtry.png", sep=""), width=350, height = 350)
-plot(x=c(1, param/10, param/5, param/2, param), y=sparsity2, xlab="Number of genes sampled per tree", ylab="% genes uninformative", pch=16)
+png(paste(directory, "/VI_full_control.png", sep=""), width=400, height=350)
+plot(1:param, cmodel1$importance[order(cmodel1$importance, decreasing=T)], xlim=c(1,1000), ylab="Variable importance", xlab="Top genes")
+dev.off()
+pdf(paste(directory, "VI_full_control.pdf", sep=""), width=5, height=5)
+plot(1:param, cmodel1$importance[order(cmodel1$importance, decreasing=T)], xlim=c(1,1000), ylab="Variable importance", xlab="Top genes")
 dev.off()
 
-ctrain2 <- control[,match(names(model$importance[model$importance[,1]>0,]), colnames(control))]
+ctrain2 <- control[,match(names(cmodel1$importance[cmodel1$importance[,1]>0,]), colnames(control))]
 ctrain2 <- cbind(ctrain2, phenotype=control$phenotype)
-
-error <- vector()
-sparsity <- vector()
-for(i in c(1, 10, 50, 250, 500, 1000, 1500, 2000, 5000, 10000)) {
-  model <- randomForest(phenotype ~ ., data=ctrain2, ntree=i, na.action=na.roughfix)
-  error <- c(error, median(model$err.rate))
-  sparsity <- c(sparsity, (sum(model$importance[,1]<=0))/(ncol(ctrain2)-1))
-}
-
-error2 <- vector()
-sparsity2 <- vector()
 param <- ncol(ctrain2)-1
-for(i in c(1, param/10, param/5, param/2, param)) {
-  model <- randomForest(phenotype ~ ., data=ctrain2, ntree=20000, mtry=i, na.action=na.roughfix)
-  error2 <- c(error2, median(model$err.rate))
-  sparsity2 <- c(sparsity2, (sum(model$importance[,1]<=0))/(ncol(ctrain2)-1))
-}
+cmodel2 <- randomForest(phenotype ~ ., data=ctrain2, ntree=10000, mtry=param/10, na.action=na.roughfix)
+cmodel2
 
-ctrain3 <- ctrain2[,match(names(model$importance[model$importance[,1]>quantile(model$importance[,1], 0.5),]), colnames(ctrain2))]
+ctrain3 <- ctrain2[,match(names(cmodel2$importance[cmodel2$importance[,1]>quantile(cmodel2$importance[,1], 0.5),]), colnames(ctrain2))]
 ctrain3 <- cbind(ctrain3, phenotype=ctrain2$phenotype)
-
-error <- vector()
-sparsity <- vector()
-for(i in c(1, 10, 50, 250, 500, 1000, 1500, 2000, 5000, 10000)) {
-  model <- randomForest(phenotype ~ ., data=ctrain3, ntree=i, na.action=na.roughfix)
-  error <- c(error, median(model$err.rate))
-  sparsity <- c(sparsity, (sum(model$importance[,1]<=0))/(ncol(ctrain2)-1))
-}
-
-error2 <- vector()
-sparsity2 <- vector()
 param <- ncol(ctrain3)-1
-for(i in c(1, param/10, param/5, param/2, param)) {
-  model <- randomForest(phenotype ~ ., data=ctrain3, ntree=2000, mtry=i, na.action=na.roughfix)
-  error2 <- c(error2, median(model$err.rate))
-  sparsity2 <- c(sparsity2, (sum(model$importance[,1]<=0))/(ncol(ctrain3)-1))
-}
+cmodel3 <- randomForest(phenotype ~ ., data=ctrain3, ntree=10000, mtry=param/10, na.action=na.roughfix)
+cmodel3
 
-ctrain4 <- ctrain3[,match(names(model$importance[model$importance[,1]>quantile(model$importance[,1], 0.5),]), colnames(ctrain3))]
+ctrain4 <- ctrain3[,match(names(cmodel3$importance[cmodel3$importance[,1]>quantile(cmodel3$importance[,1], 0.5),]), colnames(ctrain3))]
 ctrain4 <- cbind(ctrain4, phenotype=ctrain3$phenotype)
-
-error <- vector()
-sparsity <- vector()
-for(i in c(1, 10, 50, 250, 500, 1000, 1500, 2000, 5000, 10000)) {
-  model <- randomForest(phenotype ~ ., data=ctrain4, ntree=i, na.action=na.roughfix)
-  error <- c(error, median(model$err.rate))
-  sparsity <- c(sparsity, (sum(model$importance[,1]<=0))/(ncol(ctrain4)-1))
-}
-
-error2 <- vector()
-sparsity2 <- vector()
 param <- ncol(ctrain4)-1
-for(i in c(1, param/10, param/5, param/2, param)) {
-  model <- randomForest(phenotype ~ ., data=ctrain4, ntree=5000, mtry=i, na.action=na.roughfix)
-  error2 <- c(error2, median(model$err.rate))
-  sparsity2 <- c(sparsity2, (sum(model$importance[,1]<=0))/(ncol(ctrain4)-1))
-}
+cmodel4 <- randomForest(phenotype ~ ., data=ctrain4, ntree=10000, mtry=param/10, na.action=na.roughfix)
+cmodel4
 
-png(paste(directory, "/control4_error_vs_ntree.png", sep=""), width=350, height = 350)
-plot(x=c(1, 10, 50, 250, 500, 1000, 1500, 2000, 5000, 10000), y=error, xlab="Number of trees", ylab="OOB error rate", pch=16)
-dev.off()
-png(paste(directory, "/control4_sparsity_vs_ntree.png", sep=""), width=350, height = 350)
-plot(x=c(1, 10, 50, 250, 500, 1000, 1500, 2000, 5000, 10000), y=sparsity, xlab="Number of trees", ylab="% genes uninformative", pch=16)
-dev.off()
-png(paste(directory, "/control4_error_vs_mtry.png", sep=""), width=350, height = 350)
-plot(x=c(1, round(param/10), round(param/5), round(param/2), param), y=error2, xlab="Number of genes sampled per tree", ylab="OOB error rate", pch=16)
-dev.off()
-png(paste(directory, "/control4_sparsity_vs_mtry.png", sep=""), width=350, height = 350)
-plot(x=c(1, round(param/10), round(param/5), round(param/2), param), y=sparsity2, xlab="Number of genes sampled per tree", ylab="% genes uninformative", pch=16)
-dev.off()
+ctrain5 <- ctrain4[,match(names(cmodel4$importance[cmodel4$importance[,1]>quantile(cmodel4$importance[,1], 0.5),]), colnames(ctrain4))]
+ctrain5 <- cbind(ctrain5, phenotype=ctrain4$phenotype)
+param <- ncol(ctrain5)-1
+cmodel5 <- randomForest(phenotype ~ ., data=ctrain5, ntree=10000, mtry=param/10, na.action=na.roughfix, proximity=T)
+cmodel5
 
+cmodel5$predicted
 
-cmodel <- randomForest(phenotype ~ ., data=ctrain4, ntree=10000, mtry=10, na.action=na.roughfix)
-
-save(cmodel, ctrain2, ctrain3, ctrain4, file="control_traindata.Rdata")
-
-# out-of-bag votes on phenotype for your control model
-hist(cmodel$votes[,2])
-# out-of-bag votes on phenotype for your real model
-hist(model5$votes[,2])
+names(cmodel5$importance[order(cmodel5$importance[,1], decreasing=T),])[1:10]
 
 # compare votes and phenotypes for the control and real datasets
-cbind(cmodel$votes, control$phenotype, model5$votes, train5$phenotype)
+cbind(cmodel5$votes, control$phenotype, model5$votes, train5$phenotype)
 ```
 
 This approach repeats the full model-building process 5 times to see how similar the top predictor genes are. 
@@ -525,5 +464,6 @@ train4 <- cbind(train4, phenotype=train3$phenotype)
 topgenes <- c(topgenes, colnames(train4))
 }
 
+table(topgenes)
 ```
 
